# rosbot_object_recognition

./: README.md  object_recognition_clean_withorientation.py
rosbot_interfaces/: CMakeLists.txt  package.xml
rosbot_interfaces/msg/: ObstacleInfo.msg
rosbot_object_recognition/: package.xml  setup.cfg  setup.py
